[package]
name = "s32roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
getch-rs = "0.2.0"

[dependencies.winapi]
version = "0.3.9"
features = ["securitybaseapi"]

[dependencies.nix]
version = "0.27.1"
features = ["user"]

[[bin]]
name = "s32roulette"
path = "main.rs"
